--- a/restaurant.html
+++ b/restaurant.html
@@ -56,12 +56,15 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <!-- Config file for API keys -->
+  <script type="text/javascript" src="js/config.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
+  <script async defer id="googleApi"></script>
   <!-- End scripts -->
 
 </body>
