--- a/restaurant.html
+++ b/restaurant.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
+  <!-- set Viewport -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <title>Restaurant Info</title>
 </head>
@@ -14,7 +17,7 @@
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
-    <nav>
+    <nav class="container">
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
