--- a/restaurant.html
+++ b/restaurant.html
@@ -66,6 +66,9 @@
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <!-- Service worker scripts -->
+  <script type="application/javascript" charset="utf-8" src='js/indexController.js'></script>
+  
   <!-- Google Maps -->
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script>  -->
   <script async defer id="googleApi"></script>
