Revisions following Udacity project review 1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- set Viewport -->
@@ -40,7 +40,7 @@
     
     <!-- map container -->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" role="application"></div>
     </section>
 
     <!-- restaurant cards -->
