--- a/restaurant.html
+++ b/restaurant.html
@@ -66,7 +66,7 @@
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
-  <!-- Service worker scripts not needed ni restaurant.html -->
+  <!-- Service worker scripts not needed in restaurant.html -->
   
   
   <!-- Google Maps -->
