--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
   </main>
 
   <script type="application/javascript" charset="utf-8" src="js/config.js"></script>
+  <script type="application/javascript" charset="utf-8" src='js/idb.js'></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script type="application/javascript" charset="utf-8" src='js/indexController.js'></script>
+  <script type="application/javascript" charset="utf-8" src='js/idb-test_index.js'></script>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
   <script async defer id="googleApi"></script>
 
