Update IndexedDB functionality for restaurant.html

--- a/restaurant.html
+++ b/restaurant.html
@@ -62,6 +62,8 @@
   <!-- Beginning scripts -->
   <!-- Config file for API keys -->
   <script type="text/javascript" src="js/config.js"></script>
+  <!-- idb script for promises with IndexedDB -->
+  <script type="application/javascript" charset="utf-8" src='js/idb.js'></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
