--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <!-- stylesheet links -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <!-- font awesome CDN -->
+  <script id="fontAwesome"></script>
+  <!-- preconnect links -->
+  <link rel="preconnect" href="https://maps.gstatic.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <!-- PWA manifest -->
+  <link rel="manifest" href="manifest.json">
   <!-- title -->
   <title>Restaurant Reviews</title>
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <!-- font awesome -->
-  <link rel="preload" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" as="style" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
-  
 </head>
 
 <body>
@@ -58,6 +59,7 @@
   <script type="application/javascript" charset="utf-8" src='js/idb-test_index.js'></script>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
   <script async defer id="googleApi"></script>
+  
 
 
   <footer id="footer">
