--- a/restaurant.html
+++ b/restaurant.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <!-- PWA manifest -->
+  <link rel="manifest" href="/manifest.json">
   <title>Restaurant Info</title>
 </head>
 
