--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <!-- set Viewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- pwa meta tag -->
+  <meta name="theme-color" content="#afafaf">
   <!-- stylesheet links -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
