render static and dynamic maps on click, research map rendering on restaurant pages

--- a/restaurant.html
+++ b/restaurant.html
@@ -65,7 +65,7 @@
 
   <!-- Beginning scripts -->
   <!-- Config file for API keys -->
-  <script type="text/javascript" src="js/config.js"></script>
+  <script type="text/javascript" src="config.js"></script>
   <!-- idb script for promises with IndexedDB -->
   <script type="application/javascript" charset="utf-8" src='js/idb.js'></script>
   <!-- Database helpers -->
