--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- map container -->
     <section id="map-container">
       <div><img id="staticMap"></div>
-      <div class="hideMap"><div id="map" role="application"></div></div>
+      <div id="mapOuter" style="display: none"><div id="map" role="application"></div></div>
     </section>
 
     <!-- restaurant cards -->
@@ -54,7 +54,7 @@
     </section>
   </main>
 
-  <script type="application/javascript" charset="utf-8" src="js/config.js"></script>
+  <script type="application/javascript" charset="utf-8" src="config.js"></script>
   <script type="application/javascript" charset="utf-8" src='js/idb.js'></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
