--- a/prod/restaurant.html
+++ b/prod/restaurant.html
@@ -69,7 +69,7 @@
   <!-- idb script for promises with IndexedDB -->
   <script type="application/javascript" charset="utf-8" src='js/idb.js'></script>
   <!-- Database helpers -->
-  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script async type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   
