--- a/restaurant.html
+++ b/restaurant.html
@@ -55,6 +55,7 @@
     <section id="reviews-container">
       <ul id="reviews-list"></ul>
     </section>
+    <section id="new-review-container"></section>
     <!-- End reviews -->
   </main>
   <!-- End main -->
