--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <!-- stylesheet links -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles-max-width-500px.css" media="(max-width: 500px)">
   <!-- font awesome CDN -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <!-- preconnect links -->
   <link rel="preconnect" href="https://maps.gstatic.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" id="preconnectGoogleMapApi">
+  <link rel="preconnect" href="css/styles.css">
+  <link rel="preconnect" href="css/styles-max-width-500px.css">
   <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json">
   <!-- title -->
