--- a/restaurant.html
+++ b/restaurant.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/styles-reviews.css" type="text/css">
+  <link rel="stylesheet" href="css/styles-reviews-max-width-800px.css" media="(max-width: 800px)">
   <!-- font awesome CDN -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <!-- preconnect -->
